crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__const_generics_in_enum.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
impl<
    T: ::thread_aware::ThreadAware,
    const R: usize,
    const C: usize,
> ::thread_aware::ThreadAware for Matrix<T, R, C> {
    #[allow(
        clippy::redundant_clone,
        reason = "macro generated pattern moves each field once"
    )]
    fn relocated(
        self,
        source: ::thread_aware::MemoryAffinity,
        destination: ::thread_aware::MemoryAffinity,
    ) -> Self {
        match self {
            Self::Values(_v0) => {
                Self::Values(
                    ::thread_aware::ThreadAware::relocated(_v0, source, destination),
                )
            }
        }
    }
}
