crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__const_generics_in_struct.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
impl<T: ::thread_aware::ThreadAware, const N: usize> ::thread_aware::ThreadAware
for ArrayWrapper<T, N> {
    #[allow(
        clippy::redundant_clone,
        reason = "macro generated pattern moves each field once"
    )]
    fn relocated(
        self,
        source: ::thread_aware::MemoryAffinity,
        destination: ::thread_aware::MemoryAffinity,
    ) -> Self {
        let Self { values } = self;
        Self {
            values: ::thread_aware::ThreadAware::relocated(values, source, destination),
        }
    }
}
