crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__dyn_trait_object.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
impl ::thread_aware::ThreadAware for S {
    #[allow(
        clippy::redundant_clone,
        reason = "macro generated pattern moves each field once"
    )]
    fn relocated(
        self,
        source: ::thread_aware::MemoryAffinity,
        destination: ::thread_aware::MemoryAffinity,
    ) -> Self {
        let S(_f0) = self;
        S(::thread_aware::ThreadAware::relocated(_f0, source, destination))
    }
}
