crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__enum_with_lifetimes.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
impl<
    'a,
    T: ::thread_aware::ThreadAware,
    E: ::thread_aware::ThreadAware,
> ::thread_aware::ThreadAware for Result<'a, T, E> {
    #[allow(
        clippy::redundant_clone,
        reason = "macro generated pattern moves each field once"
    )]
    fn relocated(
        self,
        source: ::thread_aware::MemoryAffinity,
        destination: ::thread_aware::MemoryAffinity,
    ) -> Self {
        match self {
            Self::Ok(_v0) => {
                Self::Ok(
                    ::thread_aware::ThreadAware::relocated(_v0, source, destination),
                )
            }
            Self::Err(_v0) => {
                Self::Err(
                    ::thread_aware::ThreadAware::relocated(_v0, source, destination),
                )
            }
        }
    }
}
