crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__generic_arg_not_type.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
impl<'a, T> ::thread_aware::ThreadAware for S<'a, T> {
    #[allow(
        clippy::redundant_clone,
        reason = "macro generated pattern moves each field once"
    )]
    fn relocated(
        self,
        source: ::thread_aware::MemoryAffinity,
        destination: ::thread_aware::MemoryAffinity,
    ) -> Self {
        let Self { field } = self;
        Self { field: field }
    }
}
