crates/thread_aware_macros_impl/src/snapshots/thread_aware_macros_impl__tests__struct_simple.snap
---
source: crates/thread_aware_macros_impl/src/lib.rs
expression: derive(input)
---
impl ::thread_aware::ThreadAware for Point {
    #[allow(
        clippy::redundant_clone,
        reason = "macro generated pattern moves each field once"
    )]
    fn relocated(
        self,
        source: ::thread_aware::MemoryAffinity,
        destination: ::thread_aware::MemoryAffinity,
    ) -> Self {
        let Self { x, y } = self;
        Self {
            x: ::thread_aware::ThreadAware::relocated(x, source, destination),
            y: ::thread_aware::ThreadAware::relocated(y, source, destination),
        }
    }
}
